include/NovelRT.Interop/Maths/NrtGeoVector3F.h

    void Nrt_GeoVector3F_subtractAssignFloat(NrtGeoVector3F* lhs, float rhs);
    void Nrt_GeoVector3F_multiplyAssignFloat(NrtGeoVector3F* lhs, float rhs);
    void Nrt_GeoVector3F_divideAssignFloat(NrtGeoVector3F* lhs, float rhs);