include/NovelRT.Interop/Maths/NrtGeoVector2F.h

    typedef struct
    {
        float x;
        float y;
    } NrtGeoVector2F;