src/NovelRT.DotNet/Interop/Maths/NovelRT.cs


        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector3F_subtractAssignFloat(NrtGeoVector3F* lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector3F_multiplyAssignFloat(NrtGeoVector3F* lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector3F_divideAssignFloat(NrtGeoVector3F* lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector4F Nrt_GeoVector4F_createFromGeoVector2F(NrtGeoVector2F vector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector4F Nrt_GeoVector4F_createFromGeoVector3F(NrtGeoVector3F vector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector4F_isNaN(NrtGeoVector4F vector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector4F Nrt_GeoVector4F_uniform(float value);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector4F Nrt_GeoVector4F_zero();

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector4F Nrt_GeoVector4F_one();

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector4F_rotateToAngleAroundPoint([NativeTypeName("NrtGeoVector4F *const")] NrtGeoVector4F* vector, float angleRotationValue, NrtGeoVector3F point);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector4F_epsilonEquals(NrtGeoVector4F vector, NrtGeoVector4F other, NrtGeoVector4F epsilonValue);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector4F Nrt_GeoVector4F_getNormalised(NrtGeoVector4F vector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern float Nrt_GeoVector4F_getLength(NrtGeoVector4F vector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern float Nrt_GeoVector4F_getMagnitude(NrtGeoVector4F vector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector4F_equal(NrtGeoVector4F lhs, NrtGeoVector4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector4F_notEqual(NrtGeoVector4F lhs, NrtGeoVector4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector4F_lessThan(NrtGeoVector4F lhs, NrtGeoVector4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector4F_lessThanOrEqualTo(NrtGeoVector4F lhs, NrtGeoVector4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector4F_greaterThan(NrtGeoVector4F lhs, NrtGeoVector4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector4F_greaterThanOrEqualTo(NrtGeoVector4F lhs, NrtGeoVector4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector4F Nrt_GeoVector4F_addVector(NrtGeoVector4F lhs, NrtGeoVector4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector4F Nrt_GeoVector4F_subtractVector(NrtGeoVector4F lhs, NrtGeoVector4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector4F Nrt_GeoVector4F_multiplyVector(NrtGeoVector4F lhs, NrtGeoVector4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector4F Nrt_GeoVector4F_divideVector(NrtGeoVector4F lhs, NrtGeoVector4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector4F Nrt_GeoVector4F_addFloat(NrtGeoVector4F lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector4F Nrt_GeoVector4F_subtractFloat(NrtGeoVector4F lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector4F Nrt_GeoVector4F_multiplyFloat(NrtGeoVector4F lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector4F Nrt_GeoVector4F_divideFloat(NrtGeoVector4F lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector4F_addAssignVector(NrtGeoVector4F* lhs, NrtGeoVector4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector4F_subtractAssignVector(NrtGeoVector4F* lhs, NrtGeoVector4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector4F_multiplyAssignVector(NrtGeoVector4F* lhs, NrtGeoVector4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector4F_divideAssignVector(NrtGeoVector4F* lhs, NrtGeoVector4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector4F_addAssignFloat(NrtGeoVector4F* lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector4F_subtractAssignFloat(NrtGeoVector4F* lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector4F_multiplyAssignFloat(NrtGeoVector4F* lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector4F_divideAssignFloat(NrtGeoVector4F* lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoMatrix4x4F_isNaN(NrtGeoMatrix4x4F matrix);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoMatrix4x4F Nrt_GeoMatrix4x4F_getDefaultIdentity();

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoMatrix4x4F_equal(NrtGeoMatrix4x4F lhs, NrtGeoMatrix4x4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoMatrix4x4F_notEqual(NrtGeoMatrix4x4F lhs, NrtGeoMatrix4x4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoMatrix4x4F Nrt_GeoMatrix4x4F_addMatrix(NrtGeoMatrix4x4F lhs, NrtGeoMatrix4x4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoMatrix4x4F Nrt_GeoMatrix4x4F_subtractMatrix(NrtGeoMatrix4x4F lhs, NrtGeoMatrix4x4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoMatrix4x4F Nrt_GeoMatrix4x4F_multiplyMatrix(NrtGeoMatrix4x4F lhs, NrtGeoMatrix4x4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoMatrix4x4F_addAssignMatrix(NrtGeoMatrix4x4F* lhs, NrtGeoMatrix4x4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoMatrix4x4F_subtractAssignMatrix(NrtGeoMatrix4x4F* lhs, NrtGeoMatrix4x4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoMatrix4x4F_multiplyAssignMatrix(NrtGeoMatrix4x4F* lhs, NrtGeoMatrix4x4F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoMatrix4x4F Nrt_GeoMatrix4x4F_addFloat(NrtGeoMatrix4x4F lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoMatrix4x4F Nrt_GeoMatrix4x4F_subtractFloat(NrtGeoMatrix4x4F lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoMatrix4x4F Nrt_GeoMatrix4x4F_multiplyFloat(NrtGeoMatrix4x4F lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoMatrix4x4F_addAssignFloat(NrtGeoMatrix4x4F* lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoMatrix4x4F_subtractAssignFloat(NrtGeoMatrix4x4F* lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoMatrix4x4F_multiplyAssignFloat(NrtGeoMatrix4x4F* lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtQuadTreeHandle")]
        public static extern IntPtr Nrt_QuadTree_create(NrtGeoBounds bounds);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtResult Nrt_QuadTree_getParent([NativeTypeName("const NrtQuadTreeHandle")] IntPtr tree, [NativeTypeName("NrtQuadTreeHandle *")] IntPtr* outputParentTree);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoBounds Nrt_QuadTree_getBounds([NativeTypeName("const NrtQuadTreeHandle")] IntPtr tree);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtResult Nrt_QuadTree_getPoint([NativeTypeName("const NrtQuadTreeHandle")] IntPtr tree, [NativeTypeName("size_t")] nuint index, [NativeTypeName("NrtQuadTreePointHandle *")] IntPtr* outputPoint);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        [return: NativeTypeName("size_t")]
        public static extern nuint Nrt_QuadTree_getPointCount([NativeTypeName("const NrtQuadTreeHandle")] IntPtr tree);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtResult Nrt_QuadTree_getTopLeft([NativeTypeName("const NrtQuadTreeHandle")] IntPtr tree, [NativeTypeName("NrtQuadTreeHandle *")] IntPtr* outputCornerTree);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtResult Nrt_QuadTree_getTopRight([NativeTypeName("const NrtQuadTreeHandle")] IntPtr tree, [NativeTypeName("NrtQuadTreeHandle *")] IntPtr* outputCornerTree);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtResult Nrt_QuadTree_getBottomLeft([NativeTypeName("const NrtQuadTreeHandle")] IntPtr tree, [NativeTypeName("NrtQuadTreeHandle *")] IntPtr* outputCornerTree);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtResult Nrt_QuadTree_getBottomRight([NativeTypeName("const NrtQuadTreeHandle")] IntPtr tree, [NativeTypeName("NrtQuadTreeHandle *")] IntPtr* outputCornerTree);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_QuadTree_tryInsert([NativeTypeName("NrtQuadTreeHandle")] IntPtr tree, [NativeTypeName("NrtQuadTreePointHandle")] IntPtr point);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_QuadTree_tryRemove([NativeTypeName("const NrtQuadTreeHandle")] IntPtr tree, [NativeTypeName("NrtQuadTreePointHandle")] IntPtr point);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtResult Nrt_QuadTree_getIntersectingPoints([NativeTypeName("const NrtQuadTreeHandle")] IntPtr tree, NrtGeoBounds bounds, [NativeTypeName("NrtPointVectorHandle *")] IntPtr* outputResultVector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtResult Nrt_PointVector_delete([NativeTypeName("NrtPointVectorHandle")] IntPtr vector);
